# pixedit

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  roadmap.md  viewer.cpp
assets/samples/: blueball_128x128.txt  greenball_128x128.pix
docs/: PixFileFormat.md
scratch/: README.md
src/: Action.cpp  Action.hpp  Brush.hpp  Buffer.cpp  Buffer.hpp  BufferView.cpp  BufferView.hpp  Canvas.cpp  Canvas.hpp  Clipboard.cpp  Clipboard.hpp  EditorApp.cpp  FileDialogTinyfd.cpp  FileDialogTinyfd.hpp  Id.cpp  Id.hpp  ImGuiAppBase.cpp  ImGuiAppBase.hpp  MouseState.hpp  Pattern.hpp  Pen.hpp  PictureBuffer.cpp  PictureBuffer.hpp  PictureFile.hpp  PictureManager.cpp  PictureManager.hpp  PictureView.cpp  PictureView.hpp  PixReader.hpp  PluginManager.cpp  PluginManager.hpp  PngXClip.cpp  PngXClip.hpp  ShortcutManager.hpp  Surface.cpp  Surface.hpp  ToolDescription.hpp  ViewerApp.cpp  config.h.in  defaults.cpp  (+8 more)
src/algorithms/: rasterLine.hpp
src/clipboards/: FallbackClip.cpp  FallbackClip.hpp  PngXClip.cpp  PngXClip.hpp
src/editorApp/: EditorApp.cpp  EditorApp.hpp  FileDialogTinyfd.cpp  FileDialogTinyfd.hpp  ImGuiComponent.cpp  ImGuiComponent.hpp  ViewSettings.hpp  actions.hpp  main.cpp  shortcutPlugin.cpp  shortcutPlugin.hpp
src/editorApp/imgui/: AboutDialog.hpp  AuxWindowManager.hpp  BufferSelectionWindow.hpp  (+8 more)
src/primitives/: Blit.hpp  Line.hpp  Lines.hpp  Oval.hpp  Point.hpp  Poly.hpp  Rect.hpp
src/tools/: FloodFillTool.hpp  FreeHandTool.hpp  LinesTool.hpp  OvalTool.hpp  PictureTool.hpp  PolyTool.hpp  RectTool.hpp  SelectionFreeTool.hpp  SelectionHandTool.hpp  SelectionRectTool.hpp  ZoomTool.hpp
src/utils/: Color.hpp  PixFormat.hpp  PixReader.cpp  PixReader.hpp  PixWriter.hpp  Surface.hpp  TempSurface.cpp  TempSurface.hpp  cutoutSurface.hpp  dumpSurface.hpp  paths.cpp  paths.hpp  pixel.hpp  rasterLine.hpp  rasterOval.hpp  rasterPoly.hpp  rect.hpp  renderSelection.hpp  replayPicture.cpp  replayPicture.hpp  safeGetFormat.hpp  surface.hpp
test/: CanvasFillRectangleScenario.cpp  CanvasPointScenario.cpp  PixReaderTest.cpp  PluginManagerTest.cpp
test/algorithms/: rasterLineTest.cpp
test/utils/: PixReaderTest.cpp  PixWritterTest.cpp  rasterLineTest.cpp  rasterPolyTest.cpp
